--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -69,14 +69,14 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
+  primary: #0056b8,
+  secondary: #002652,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
 );
-$light-gray: #e6e6e6;
-$medium-gray: #cacaca;
+$light-gray: #ccc;
+$medium-gray: #4d4d4f;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
