- criação dos cards -a asjustes no set do foundation

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -66,11 +66,12 @@
 // ---------
 
 $global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-width: rem-calc(1400);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #0056b8,
   secondary: #002652,
+  third: #4d4d4f,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
