--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,8 @@
 @charset 'utf-8';
 
-@import 'settings';
-@import 'foundation';
-@import 'motion-ui';
+@import "settings";
+@import "foundation";
+@import "motion-ui";
 
 // Global styles
 @include foundation-global-styles;
@@ -64,22 +64,182 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-body {
-    background-color: #ccc;
+@font-face {
+    font-family: NeoSansProLight;
+    src: url("/assets/fonts/NeoSansProLight.OTF");
 }
 
-.logo {
+@font-face {
+    font-family: NeoSansProRegular;
+    src: url("/assets/fonts/NeoSansProRegular.OTF");
+}
+
+@font-face {
+    font-family: NeoSansProMedium;
+    src: url("/assets/fonts/NeoSansProMedium.OTF");
+}
+
+header {
+    height: 100px;
+}
+
+body {
+    background-color: #ccc;
+    font-family: NeoSansProRegular;
+}
+
+h1 {
+    font-size: 30px;
+    font-family: NeoSansProMedium;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(#002652, #0056b8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+p {
+    text-align: center;
+    font-size: 20px;
+    color: #333;
+    line-height: 25px;
+}
+
+.header--menu {
     padding-top: 30px;
 }
 
-.grid-container {
+.logo {
+    width: 80px;
+}
+
+.logoimg {
+    width: 40px;
+}
+
+.menu li a {
+    color: get-color(third);
+    text-transform: uppercase;
+    font-size: 20px;
+    text-decoration: none;
+    padding: 20px;
+}
+
+.menu li a:hover,
+.menu .active a {
+    color: $primary-color;
+}
+
+.general {
     background-color: #fff;
+    padding: 0 0;
 }
 
 .banner {
-    background-image: url('../assets/images/banner.png');
+    background-image: url("../assets/images/banner.png");
     background-size: cover;
     background-position: bottom;
-    height: 600px;
-    margin-top: -180px;
+    height: 800px;
+    margin-top: -280px;
+}
+
+.banner--area {
+    display: flex;
+    height: 800px;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner--image {
+    width: 350px;
+    margin-top: 400px;
+    padding: 20px;
+}
+
+.banner--image {
+    width: 350px;
+    margin-top: 300px;
+}
+
+.service-card {
+    background: linear-gradient(130deg, #002652, #0056b8);
+    text-align: center;
+    padding: 30px 25px;
+    text-align: center;
+    border-radius: 10px;
+    align-items: center;
+    margin-top: 20px;
+
+    h2 {
+        color: #fff;
+        font-size: 22px;
+    }
+
+    img {
+        height: 75px;
+        margin: 20px 0;
+    }
+}
+
+.service--line {
+    background-color: #fff;
+    width: 100%;
+    height: 0.5px;
+    margin: 20px 0;
+}
+
+.description {
+    color: #fff;
+    font-size: 20px;
+    font-family: NeoSansProLight;
+}
+
+.occupation--desc {
+    width: 360px;
+    margin: 0 -90px 70px 0;
+}
+
+.occupation--map {
+    padding: 15px;
+
+    img {
+        width: 500px;
+    }
+}
+
+footer {
+    background: linear-gradient(130deg, #002652, #0056b8);
+    padding: 30px;
+
+    h2,
+    label {
+        color: #fff;
+    }
+
+    label {
+        text-align: center;
+        font-size: 60px;
+        font-weight: 600;
+        letter-spacing: 0.5rem;
+    }
+}
+
+.contact--left h2 {
+    text-align: center;
+    color: #fff;
+    font-weight: normal;
+    font-size: 30px;
+}
+
+.contact--right h2 {
+    text-align: left;
+    color: #fff;
+    font-weight: normal;
+    font-size: 26px;
+}
+
+.vertical-line {
+    width: 0.2px;
+    height: 100px;
+    background-color: #fff;
+    margin: 0 90px;
 }
